[build-system]
requires = ["setuptools >= 41.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyNeuroTrace"
version = "1.0.0"
dependencies = [
"setuptools>=70.0.0",
"ipython",
"ipywidgets",
"matplotlib",
"matplotlib-scalebar",
"numpy<2.0.0",
"pytest",
"PyQt5",
"scipy",
"tqdm"
]

requires-python = ">=3.9"
authors = [
    { name="Pat Coleman", email="padsterpat@gmail.com" },

    { name="Peter Hogg", email="peter.hogg@ubc.ca" }
]
description = "Python code for neural time series"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

keywords=[ "neuron", "analysis", "timeseries", "neuroscience"]

[project.optional-dependencies]
GPU = ["cupy"]

[project.urls]
Homepage = "https://github.com/padster/pyNeuroTrace"
Issues = "https://github.com/padster/pyNeuroTrace/issues"